cabal-version:      2.4
name:               elr
version:            0.3.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/edh
bug-reports:        https://github.com/e-wrks/edh/issues
synopsis:           Đ (Edh) Language Runtime
description:
  Please see the README on Github at <https://github.com/e-wrks/edh>

category:           Object,Event,Interpreted,Programming,Language
build-type:         Simple
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/edh
  subdir:   elr

library
  exposed-modules:
    Language.Edh.Args
    Language.Edh.Control
    Language.Edh.CoreLang
    Language.Edh.Evaluate
    Language.Edh.IOPD
    Language.Edh.PkgMan
    Language.Edh.RtTypes
    Language.Edh.Utils
    Language.Edh.EdhEvs
    Language.Edh.HostEvs
    Language.Edh.InterOp
    Language.Edh.Parser

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , aeson
    , base                  >=4.12  && <5
    , bytestring
    , clock
    , containers
    , directory
    , filepath
    , ghc                   >=8.6.5
    , hashable
    , haskeline
    , lossless-decimal
    , megaparsec            >7.0
    , mtl
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , uuid
    , vector
