cabal-version:      2.4
name:               edh
version:            0.3.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/edh
bug-reports:        https://github.com/e-wrks/edh/issues
synopsis:           a modern Object layer spliced with Haskell
description:
  Please see the README on Github at <https://github.com/e-wrks/edh>

category:           Object,Event,Interpreted,Programming,Language
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/edh
  subdir:   host.hs

library
  exposed-modules:
    Language.Edh.Batteries
    Language.Edh.EHI
    Language.Edh.Runtime

  other-modules:
    Language.Edh.Batteries.Assign
    Language.Edh.Batteries.Console
    Language.Edh.Batteries.Ctrl
    Language.Edh.Batteries.Data
    Language.Edh.Batteries.Evt
    Language.Edh.Batteries.Math
    Language.Edh.Batteries.Reflect
    Language.Edh.Batteries.Vector

  hs-source-dirs:     pub
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12  && <5
    , bytestring
    , clock
    , containers
    , directory
    , edh-internal
    , filepath
    , ghc                   >=8.6.5
    , hashable
    , haskeline
    , lossless-decimal
    , megaparsec            >7.0
    , mtl
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unordered-containers
    , uuid
    , vector

library edh-internal
  exposed-modules:
    Language.Edh.Args
    Language.Edh.Control
    Language.Edh.Details.CoreLang
    Language.Edh.Details.Evaluate
    Language.Edh.Details.IOPD
    Language.Edh.Details.PkgMan
    Language.Edh.Details.RtTypes
    Language.Edh.Details.Tx
    Language.Edh.Details.Utils
    Language.Edh.Event
    Language.Edh.InterOp
    Language.Edh.Parser

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12  && <5
    , bytestring
    , clock
    , containers
    , directory
    , filepath
    , ghc                   >=8.6.5
    , hashable
    , haskeline
    , lossless-decimal
    , megaparsec            >7.0
    , mtl
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unordered-containers
    , uuid
    , vector

executable edh
  main-is:            Main.hs
  hs-source-dirs:     runmodu
  other-modules:      Repl
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-maxN31

  -- same dependencies as edh-internal, so you can:
  -- cabal v2-repl "--repl-options=-isrc -ipub" edhi
  build-depends:
    , base                  >=4.12  && <5
    , bytestring
    , clock
    , containers
    , directory
    , edh
    , filepath
    , ghc                   >=8.6.5
    , hashable
    , haskeline
    , lossless-decimal
    , megaparsec            >7.0
    , mtl
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unordered-containers
    , vector

executable runedh
  main-is:            Main.hs
  hs-source-dirs:     runfile
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-maxN31

  -- same dependencies as edh-internal, so you can:
  -- cabal v2-repl "--repl-options=-isrc -ipub" edh xxx
  build-depends:
    , base                  >=4.12  && <5
    , bytestring
    , clock
    , containers
    , directory
    , edh
    , filepath
    , ghc                   >=8.6.5
    , hashable
    , haskeline
    , lossless-decimal
    , megaparsec            >7.0
    , mtl
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unordered-containers
    , vector
