cabal-version: 2.4
name: lossless-decimal
version: 0.3.0.0
license: BSD-3-Clause
copyright: Compl Yue
maintainer: compl.yue@icloud.com
author: Compl Yue
stability: experimental
homepage: https://github.com/e-wrks/edh/lossless-decimal
bug-reports: https://github.com/e-wrks/edh/issues
synopsis: a numeric type for lossless decimal arithmetic
description:
    Please see the README on Github at <https://github.com/e-wrks/edh/lossless-decimal>
category: Numeric,Arithmetic
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/e-wrks/edh
    subdir: lossless-decimal

library
    exposed-modules:
        Data.Lossless.Decimal
    hs-source-dirs: src
    default-language:   Haskell2010
    default-extensions:
        NoImplicitPrelude
        BangPatterns
        ConstraintKinds
        DataKinds
        FlexibleContexts
        FlexibleInstances
        GADTs
        KindSignatures
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeOperators
        ViewPatterns
    ghc-options: -Wall
    build-depends:
        base >=4.12 && <5
        , hashable -any
        , scientific -any
